<resources>
    <string name="app_name">NBA Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="foul">Foul</string>
    <string name="_0">0</string>
    <string name="reset">Reset</string>
    <string name="foul_count">Foul: </string>
    <string name="foul_0">Foul: 0</string>
</resources>
